<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.About">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="149dp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="566dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="176dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="420dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/logo"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="378dp"
        android:layout_height="175dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="228dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/about_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="338dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="378dp"
        android:layout_height="175dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-139dp"
        android:layout_marginBottom="-38dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/rate_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="338dp" />
</RelativeLayout>